<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:background="@drawable/inspera">
    </ImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:background="@drawable/inspera_bg"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/caption"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                app:layout_constraintBottom_toTopOf="@+id/demo_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.843"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/learn_more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/learn_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/demo_button"
                app:layout_constraintHorizontal_bias="0.875"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/demo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginBottom="32dp"
                android:text="@string/demo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <GridLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:columnCount="3"
        android:rowCount="3">

        <Button
            android:id="@+id/support_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/support"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/blog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/blog"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/product"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/learn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/learn"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/about"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/privacy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/privacy"
            android:textColor="@android:color/black"/>

        <TextView />
        <Button
            android:id="@+id/contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/contact"
            android:textColor="@android:color/black"/>
    </GridLayout>


</LinearLayout>